charts/netbird/examples/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: netbird-mgmt-vs
  namespace: netbird
spec:
  gateways:
    - istio-gw/ext-gw
  hosts:
    - "netbird.example.com"
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: netbird-management
            port:
              number: 80
    - match:
        - uri:
            prefix: /management.ManagementService
      route:
        - destination:
            host: netbird-management
            port:
              number: 80
    - match:
        - uri:
            prefix: /signalexchange.SignalExchange
      route:
        - destination:
            host: netbird-signal
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: netbird-dashboard-mgmt-vs
  namespace: netbird
spec:
  gateways:
    - istio-gw/ext-gw
  hosts:
    - "netbird-dashboard.example.com"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: netbird-dashboard
            port:
              number: 80
